retry/virtual-service-nginx-httpd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
  - route:
    - destination:
        host: nginx-service
    timeout: 2s 
#   retries:
#     attempts: 5 
#     perTryTimeout: 1s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-vs
spec:
  hosts:
  - httpd-service
  http:
  - fault:
#     abort:
#       percentage: 
#         value: 100
#       httpStatus: 503
      delay:
        percent: 100
        fixedDelay: 10s
    route:
    - destination:
        host: httpd-service
